--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?3838">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8410">
-	<link rel="stylesheet" type="text/css" href="style.css?7206">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5256">
+	<link rel="stylesheet" type="text/css" href="style.css?5930">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -35,10 +35,10 @@
 
 <!-- header -->
 <div class="bloc l-bloc nonein" id="header">
-	<div class="container bloc-lg-lg bloc-sm">
-		<div class="row mt-3">
-			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 text-start">
-				<img src="img/viva_mar_logo.svg" class="img-fluid mx-auto d-block img-style" alt="placeholder image" width="157" height="110">
+	<div class="container bloc-sm bloc-sm-lg">
+		<div class="row mt-3 mt-lg-3 g-0">
+			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 text-start ">
+				<img src="img/viva_mar_logo.svg" class="img-fluid img-protected mx-auto d-block img-style" alt="placeholder image">
 			</div>
 		</div>
 	</div>
@@ -51,22 +51,22 @@
 <!-- bloc-1 -->
 <div class="bloc l-bloc" id="bloc-1">
 	<div class="container bloc-sm">
-		<div class="row mt-3 mb-3">
+		<div class="row mt-4 mb-4">
 			<div class="col text-center">
 				<a class="btn btn-lg btn-d btn-style-none btn-style1">English</a>
 			</div>
 		</div>
-		<div class="row mt-3 mb-3">
+		<div class="row mt-4 mb-4">
 			<div class="col text-center">
 				<a class="btn btn-lg btn-d btn-style-none btn-style1">Русский</a>
 			</div>
 		</div>
-		<div class="row mt-3 mb-3">
+		<div class="row mt-4 mb-4">
 			<div class="col text-center">
 				<a class="btn btn-lg btn-d btn-style-none btn-style1">Italiano</a>
 			</div>
 		</div>
-		<div class="row mt-3 mb-3">
+		<div class="row mt-4 mb-4">
 			<div class="col text-center">
 				<a class="btn btn-lg btn-d btn-style-none btn-style1">العربية</a>
 			</div>
@@ -84,7 +84,7 @@
 <footer>
 
 <!-- footer -->
-<div class="bloc bgc-6037 nonein b-divider bg-b-edge d-bloc footer " id="footer" data-scroll-fx-resistance="10">
+<div class="bloc bgc-6037 nonein b-divider bg-b-edge d-bloc footer" id="footer" data-scroll-fx-resistance="10">
 	<div class="container bloc-md-lg bloc-sm">
 		<div class="row align-items-center">
 			<div class="col-md-2 offset-md-3 col-sm-4 text-center col-4">
@@ -114,10 +114,10 @@
 
 
 <!-- Additional JS -->
-<script src="./js/bootstrap.bundle.min.js?941"></script>
-<script src="./js/blocs.min.js?57"></script>
+<script src="./js/bootstrap.bundle.min.js?5866"></script>
+<script src="./js/blocs.min.js?1288"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/scrollFX.js?7707"></script>
+<script src="./js/scrollFX.js?1384"></script>
 <!-- Additional JS END -->
 
 
